# autonomous-driving-ros

./: .gitattributes  .gitignore  README.md
Projects/AutonomousDriving/src/car_bringup/: CMakeLists.txt  map_mod.yaml  package.xml
Projects/AutonomousDriving/src/car_bringup/launch/: depth_image_proc.launch  gmapping.launch  master.launch  octomap_server.launch  pointcloud_to_laserscan.launch  rtab.launch
Projects/AutonomousDriving/src/car_bringup/rviz/: nav.rviz  rviz.rviz
Projects/AutonomousDriving/src/controller_pkg/: CMakeLists.txt  package.xml
Projects/AutonomousDriving/src/controller_pkg/src/: controller_node.cpp
Projects/AutonomousDriving/src/depth_image_conversion/src/: semantic_depth_to_laserscan.cpp
Projects/AutonomousDriving/src/navigation/: CMakeLists.txt  README.md  package.xml
Projects/AutonomousDriving/src/navigation/config/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
Projects/AutonomousDriving/src/navigation/launch/: move_base.launch
Projects/AutonomousDriving/src/navigation/resources/: waypoints_with_orientations.txt
Projects/AutonomousDriving/src/navigation/src/: master_node.cpp  odom_publisher_node.cpp  odom_rotator_node.cpp
Projects/AutonomousDriving/src/simulation/launch/: simulation.launch
Projects/AutonomousDriving/src/simulation/src/: ROS_command_transmitter.cpp
Projects/AutonomousDriving/src/simulation/unity_sim/Build_Ubuntu/: LinuxPlayer_s.debug  UnityPlayer_s.debug
Projects/AutonomousDriving/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/: globalgamemanagers  level0
Projects/AutonomousDriving/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/Resources/: unity_builtin_extra
Projects/AutonomousDriving/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/StreamingAssets/: simulation_config.json
Projects/AutonomousDriving/src/traffic_light_detector/: CMakeLists.txt
Projects/AutonomousDriving/src/traffic_light_detector/include/traffic_light_detector/: traffic_light_server.h
Projects/AutonomousDriving/src/traffic_light_detector/msg/: .msg  TrafficLight.msg
Projects/AutonomousDriving/src/traffic_light_detector/src/: traffic_light_client.cpp  traffic_light_server.cpp
Projects/RosDockerSetup/: Dockerfile  README.md  docker-compose.yml
autonomous-driving/src/car_bringup/: README.md  map_mod.xcf  map_mod.yaml
autonomous-driving/src/car_bringup/config/: rtab.rviz
autonomous-driving/src/car_bringup/launch/: depth_image_proc.launch  master.launch
autonomous-driving/src/car_bringup/rviz/: rviz.rviz
autonomous-driving/src/controller_pkg/: package.xml
autonomous-driving/src/depth_image_conversion/: CMakeLists.txt  package.xml
autonomous-driving/src/depth_image_conversion/launch/: semantic_depth_to_laserscan.launch
autonomous-driving/src/navigation/: CMakeLists.txt  package.xml
autonomous-driving/src/navigation/config/: costmap_common_params.yaml  navfn_ros_global_planner_params.yaml
autonomous-driving/src/navigation/launch/: master_node.launch
autonomous-driving/src/navigation/resources/: waypoints_with_orientations.txt
autonomous-driving/src/navigation/src/: odom_publisher_node.cpp  odom_rotator_node.cpp
autonomous-driving/src/simulation/launch/: simulation_demo.launch
autonomous-driving/src/simulation/rviz/: visualization.rviz
autonomous-driving/src/simulation/src/: true_state_parser.h
autonomous-driving/src/simulation/unity_sim/Build_Ubuntu/: AD_Sim.x86_64
autonomous-driving/src/simulation/unity_sim/Build_Ubuntu/AD_Sim_Data/: app.info
autonomous-driving/src/traffic_light_detector/: README.md  package.xml
autonomous-driving/src/traffic_light_detector/srv/: DetectTrafficLight.srv
